--- a/index.html
+++ b/index.html
@@ -164,229 +164,6 @@
             </div>
         </section>
 
-        <div class="main-title">
-            <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
-        </div>
-        <p class="port-text">
-            Here is some of my work that I've done in various programming languages.
-        </p>
-        <div class="portfolios">
-            <div class="portfolio-item">
-                <div class="image">
-                    <img src="img/port1.jpg" alt="">
-                </div>
-                <div class="hover-items">
-                    <h3>Project Source</h3>
-                    <div class="icons">
-                        <a href="#" class="icon">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="image">
-                    <img src="img/port2.jpg" alt="">
-                </div>
-                <div class="hover-items">
-                    <h3>Project Source</h3>
-                    <div class="icons">
-                        <a href="#" class="icon">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="image">
-                    <img src="img/port3.jpg" alt="">
-                </div>
-                <div class="hover-items">
-                    <h3>Project Source</h3>
-                    <div class="icons">
-                        <a href="#" class="icon">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="image">
-                    <img src="img/port4.jpg" alt="">
-                </div>
-                <div class="hover-items">
-                    <h3>Project Source</h3>
-                    <div class="icons">
-                        <a href="#" class="icon">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="image">
-                    <img src="img/port5.jpg" alt="">
-                </div>
-                <div class="hover-items">
-                    <h3>Project Source</h3>
-                    <div class="icons">
-                        <a href="#" class="icon">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="image">
-                    <img src="img/port2.jpg" alt="">
-                </div>
-                <div class="hover-items">
-                    <h3>Project Source</h3>
-                    <div class="icons">
-                        <a href="#" class="icon">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-item">
-                <div class="image">
-                    <img src="img/port7.jpg" alt="">
-                </div>
-                <div class="hover-items">
-                    <h3>Project Source</h3>
-                    <div class="icons">
-                        <a href="#" class="icon">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-behance"></i>
-                        </a>
-                        <a href="#" class="icon">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </section>
-        <section class="container" id="blogs">
-            <div class="blogs-content">
-                <div class="main-title">
-                    <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
-                </div>
-                <div class="blogs">
-                    <div class="blog">
-                        <img src="img/port6.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                How to Create Your Own Website
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog1.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                How to Become an Expert in Web Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog2.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Become a Web Designer in 10 Days
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/blog3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Debbuging made easy with Web Inspector
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port1.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Get started with Web Design and UI Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                This is what you need to know about Web Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
@@ -396,8 +173,6 @@
                     <div class="left-contact">
                         <h4>Contact me here</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            In, laborum numquam? Quam excepturi perspiciatis quas quasi.
                         </p>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -406,7 +181,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    : London, united Kingdom
+                                    : Patgram, Lalmonirhat, Bangladesh
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -415,7 +190,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>: sayemprodhan@outlook.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -424,7 +199,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>: Bangladesh Army University of Science and Technology, Bangladesh</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -433,7 +208,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>: +8801796926131</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -442,10 +217,10 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>: English, Bengali</span>
                                 </p>
                             </div>
-                        </div>
+                        <!-- </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
                                 <a href="www.facebook.com" target="_blank">
@@ -461,7 +236,7 @@
                                     <i class="fab fa-youtube"></i>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="right-contact">
                         <form action="" class="contact-form">
@@ -494,6 +269,9 @@
         </div>
         <div class="control" data-id="about">
             <i class="fas fa-user"></i>
+        </div>
+        <div class="control" data-id="contact">
+            <i class="fas fa-email"></i>
         </div>
     </div>
     <div class="theme-btn">
