--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <i class="fas fa-user"></i>
         </div>
         <div class="control" data-id="contact">
-            <i class="fas fa-email"></i>
+            <i class="fas fa-envelope"></i>
         </div>
     </div>
     <div class="theme-btn">
