--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section> 
     </main>
 
     <div class="controls">
