--- a/index.html
+++ b/index.html
@@ -22,16 +22,17 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="https://i.postimg.cc/y6S0RJFg/IMG20210514102514.jpg" alt="">
+                    <img src="https://i.postimg.cc/dV6ck8WT/cropped.jpg" alt="profile image of sayem prodhan">
+<!--                     <img src="https://i.postimg.cc/y6S0RJFg/IMG20210514102514.jpg" alt=""> -->
                 </div>
             </div>
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>S. M. A Sayem Prodhan</span>
-                    A CSE student
+                    A CSE <del>student</del> graduate
                 </h1>
                 <p>
-                    I am a CSE student at Bangladesh Army University of Science and Technology, Saidpur, Bangladesh
+                    I am a CSE <del>student at</del> graduate from Bangladesh Army University of Science and Technology, Saidpur, Bangladesh
 
                 </p>
                 <div class="btn-con">
@@ -52,9 +53,12 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        CSE student <br>
+                        CSE <del>student</del> graduate <br>
+                        Problem Solver<br>
+                        Android development <br>
+                        Jetpack Compose<br>
+                        Flutter<br>
                         WEB Developer <br>
-                        Problem Solver
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -208,7 +212,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: +8801796926131</span>
+                                    <span>: +880 1796926131</span>
                                 </p>
                             </div>
                             <div class="contact-item">
