--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="https://github.com/Anan5a/Anan5a.github.io/tree/main/cv/cv_Sayem_Prodhan.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -58,10 +58,10 @@
                         Android development <br>
                         Jetpack Compose<br>
                         Flutter<br>
-                        WEB Developer <br>
+                        Backend Developer <br>
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="https://github.com/Anan5a/Anan5a.github.io/tree/main/cv/cv_Sayem_Prodhan.pdf" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -98,6 +98,15 @@
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
                     <div class="progress-bar">
+                        <p class="prog-title">C</p>
+                        <div class="progress-con">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="ccpp"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
                         <p class="prog-title">C++</p>
                         <div class="progress-con">
                             <p class="prog-text">65%</p>
@@ -106,6 +115,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="progress-bar">
                         <p class="prog-title">PHP</p>
                         <div class="progress-con">
@@ -127,7 +137,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Angular</p>
                         <div class="progress-con">
-                            <p class="prog-text">55%</p>
+                            <p class="prog-text">40%</p>
                             <div class="progress">
                                 <span class="angular"></span>
                             </div>
@@ -136,9 +146,18 @@
                     <div class="progress-bar">
                         <p class="prog-title">Python</p>
                         <div class="progress-con">
-                            <p class="prog-text">65%</p>
+                            <p class="prog-text">70%</p>
                             <div class="progress">
                                 <span class="python"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Tensorflow</p>
+                        <div class="progress-con">
+                            <p class="prog-text">70%</p>
+                            <div class="progress">
+                                <span class="tensorflow"></span>
                             </div>
                         </div>
                     </div>
@@ -151,10 +170,41 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="progress-bar">
+                        <p class="prog-title">Jetpack Compose</p>
+                        <div class="progress-con">
+                            <p class="prog-text">30%</p>
+                            <div class="progress">
+                                <span class="jp-compose"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Flutter</p>
+                        <div class="progress-con">
+                            <p class="prog-text">20%</p>
+                            <div class="progress">
+                                <span class="flutter"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Kotlin</p>
+                        <div class="progress-con">
+                            <p class="prog-text">40%</p>
+                            <div class="progress">
+                                <span class="kotlin"></span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <h4 class="stat-title">My Timeline</h4>
             <div class="timeline">
+
+<!-- 
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
@@ -164,6 +214,23 @@
                     <p>
                         CSE student at BAUST
                     </p>
+                </div> -->
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2019 - 2024</p>
+                    <h5>Student<span> - BAUST</span></h5>
+                    <p>
+                        CSE graduate from BAUST
+                    </p>
+                    <del>
+                        <p>
+                            CSE student at BAUST
+                        </p>
+                    </del>
+                    
                 </div>
             </div>
         </section>
@@ -226,7 +293,9 @@
                             </div>
                         </div>
                         <div class="right-contact">
-                            <form action="" class="contact-form">
+
+                            <h2>Send me an email</h2>
+                            <!-- <form action="" class="contact-form">
                                 <div class="input-control i-c-2">
                                     <input type="text" required placeholder="YOUR NAME">
                                     <input type="email" required placeholder="YOUR EMAIL">
@@ -243,7 +312,7 @@
                                         <span class="btn-icon"><i class="fas fa-paper-plane"></i></span>
                                     </a>
                                 </div>
-                            </form>
+                            </form> -->
                         </div>
                     </div>
                 </div>
